@@ -1,3 +1,12 @@
+2008-04-30  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-prefs.c: (fill_props_model):
+	* src/baobab.c: (baobab_init), (baobab_shutdown):
+	* src/callbacks.c: (volume_changed), (contents_changed_cb):
+	* src/callbacks.h:
+
+	Gio migration
+		
 2008-04-29  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-treeview.c: (on_tv_button_press):
